@@ -46,6 +46,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #16116: Fix include and library paths to be correctwhen  building C
+  extensions in venvs.
+
 - Issue #16245: Fix the value of a few entities in html.entities.html5.
 
 - Issue #14398: Fix size truncation and overflow bugs in the bz2 module.
